# automation-framework

./: .gitignore  AutomationFramework.spec  README.md  automation_config.yaml  demo_workflow.json  gui.py  headless_workflow.json  pyproject.toml  requirements.txt
core/: __init__.py  behavior_engine.py  input_controller.py  movement_engine.py  typing_engine.py
docs/: architecture.md  usage.md
examples/: natural_click_demo.py  realistic_typing_demo.py  vision_auto_click_demo.py
movement_adapters/: __init__.py  human_mouse_adapter.py  humancursor_adapter.py  pyclick_adapter.py
tests/: test_behavior_patterns.py  test_movement_models.py
utils/: __init__.py  ai_agent.py  config_loader.py  randomness.py  timing_models.py  window_manager.py
vision/: __init__.py  object_detection.py  screen_capture.py  template_matching.py
